[package]
name = "alloy-fireblocks"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = """
alloy-rs EIP-1193 compatible provider
"""

[dependencies]
alloy-core = { version="0.8.18", default-features = false }
alloy-provider = { version="0.9.2" }
alloy-signer = { version="0.9.2", default-features = false }
alloy-transport = { version="0.9.2", default-features = false }
jsonwebtoken = "7"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "2.0.11"
